@@ -2,8 +2,12 @@ package org.lee.study.stream;
 
 import org.junit.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Spliterator;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 public class StreamDemo {
@@ -23,7 +27,7 @@ public class StreamDemo {
         List<Person> collect = people.stream().filter(person -> {
             person.id += 10;
             return true;
-        }).collect(Collectors.toList());
+        }).toList();
         for (int i = 0; i < people.size(); i++) {
             System.out.println(people.get(i) == collect.get(i));
             System.out.println(people.get(i).id == collect.get(i).id); // true
@@ -35,6 +39,53 @@ public class StreamDemo {
         public Person(Integer id) {
             this.id = id;
         }
+    }
+    @Test
+    public void test_spliterator(){
+        List<Integer> list = new ArrayList<>();
+        list.add(2);
+        list.add(3);
+        list.add(4);
+        list.add(1);
+        Spliterator<Integer> first = list.stream().spliterator();
+        Spliterator<Integer> second = first.trySplit();
+        first.forEachRemaining(num -> {
+            System.out.printf("first spliterator item: %d\n", num);
+        });
+        second.forEachRemaining(num -> {
+            System.out.printf("second spliterator item: %d\n", num);
+        });
+    }
+
+    @Test
+    public void test_char(){
+        System.out.printf("是否存在ORDERED特性:%s\n", hasCharacteristics(Spliterator.ORDERED));
+        System.out.printf("是否存在SIZED特性:%s\n", hasCharacteristics(Spliterator.SIZED));
+        System.out.printf("是否存在DISTINCT特性:%s\n", hasCharacteristics(Spliterator.DISTINCT));
+
+    }
+    public static int characteristics() {
+        return Spliterator.ORDERED | Spliterator.SIZED | Spliterator.SORTED;
+    }
+
+    public static boolean hasCharacteristics(int characteristics) {
+        return (characteristics() & characteristics) == characteristics;
+    }
+
+    interface Wrapper {
+
+        void doAction();
+    }
+
+    @Test
+    public void test_wrapper() {
+        AtomicInteger counter = new AtomicInteger(0);
+        Wrapper first = () -> System.out.printf("wrapper [depth => %d] invoke\n", counter.incrementAndGet());
+        Wrapper second = () -> {
+            first.doAction();
+            System.out.printf("wrapper [depth => %d] invoke\n", counter.incrementAndGet());
+        };
+        second.doAction();
     }
 
 }
